# fastapi-poetry-demo

./: Makefile  README.md  pyproject.toml  requirements-prod.txt  requirements.txt
app/: .env.sample  main.py  models.py  settings.py
app/configs/: app.py  auth.py  db.py  oss.py
app/dependencies/: auth.py  db.py  oss.py  validator.py
app/models/: authn.py  base.py  user.py
app/routers/: __init__.py  authn.py  demo.py  root.py  user.py
app/schemas/: authn.py
config/: .env.sample  logging.yaml  requirements-prod.txt  requirements.txt
fastapi_poetry_demo/: main.py
tests/unit/: __init__.py  base.py  test_root.py
