[tool.poetry]
name = "fastapi-poetry-demo"
version = "0.1.0"
description = ""
authors = ["tx7do <yanglinbo@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]


[tool.poetry.scripts]
start = "app.main:main"


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
Babel = "*"
aiofiles = "*"
redis = "^4.2.0rc1"
bcrypt = "*"
fastapi = "*"
jinja2 = "*"
python = "^3.9"
python-multipart = "*"
tortoise-orm = "*"
uvicorn = { version = "*", extras = ["standard"] }
pendulum = "*"
aiomysql = "^0.2.0"
pydantic = "*"
pydantic-settings = "^2.0.2"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
update = "^0.0.1"
minio = "^7.1.15"

[tool.poetry.dev-dependencies]
# test
pytest = "*"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-xdist = "*"
httpx = "*"
# lint
black = "*"
flake8 = "*"
isort = "*"
pylint = "*"
# example
asyncmy = "*"
asyncpg = "*"
python-dotenv = "*"
mypy = "*"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
